// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h4>
    Viewing 
    3
    expenses
    totalling 
    17,5 €
  </h4>
</div>
`;

exports[`should render ExpensesSummary correctly with one expense 1`] = `
<div>
  <h4>
    Viewing 
    1
    expense
    totalling 
    17,5 €
  </h4>
</div>
`;
